[project]
name = "comfygit-env-my-new-env"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.8",
    "alembic",
    "av>=14.2.0",
    "comfyui-embedded-docs==0.3.1",
    "comfyui-frontend-package==1.32.10",
    "comfyui-workflow-templates==0.7.25",
    "einops",
    "kornia>=0.7.1",
    "numpy>=1.25.0",
    "pillow",
    "psutil",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "pyyaml",
    "safetensors>=0.4.2",
    "scipy",
    "sentencepiece",
    "spandrel",
    "sqlalchemy",
    "tokenizers>=0.13.3",
    "torch",
    "torchaudio",
    "torchsde",
    "torchvision",
    "tqdm",
    "transformers>=4.50.3",
    "yarl>=1.18.0",
]

[tool.comfygit]
schema_version = 1
comfyui_version = "v0.3.76"
comfyui_version_type = "release"
comfyui_commit_sha = "30c259cac8c08ff8d015f9aff3151cb525c9b702"
python_version = "3.12"
torch_backend = "auto"

[tool.uv]
constraint-dependencies = ["torch==2.9.1+cu128", "torchvision==0.24.1+cu128", "torchaudio==2.9.1+cu128"]

[tool.uv.sources.comfygit-core]
path = "/home/akatzfey/projects/comfyhub/comfygit/packages/core"
editable = true


[tool.uv.sources.torch]
index = "pytorch-cu128"

[tool.uv.sources.torchvision]
index = "pytorch-cu128"

[tool.uv.sources.torchaudio]
index = "pytorch-cu128"
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
[dependency-groups]
system-nodes = ["watchdog>=6.0.0", "zeroconf>=0.131.0", "comfygit-core>=0.3.5"]
